# Othello

./: CMakeLists.txt
core/: Board.cpp  Board.hpp  CMakeLists.txt  Evaluate.cpp  Evaluate.hpp  GameState.cpp  GameState.hpp  SimpleAI.cpp  SimpleAI.hpp  StrongerAI.cpp  StrongerAI.hpp
exp/: CMakeLists.txt  mainPlayGame.cpp  mainPrintBoard.cpp
gtest/: CMakeLists.txt  testBoard.cpp  testGameState.cpp  testSimpleAI.cpp  testSimpleEvaluate.cpp  testStrongerEvaluate.cpp
